--- a/learningmatch/src/app/signup/page.module.css
+++ b/learningmatch/src/app/signup/page.module.css
@@ -108,4 +108,8 @@
   .loginLink:hover {
     text-decoration: underline;
   }
-  
+  .error {
+    color: red;
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
